web/styles/settings.css
/* ... */
.profile-settings-form {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap-reverse;
}

.profile-main-panel {
    margin-right: 20px;
}

.profile-side-panel {
    margin-right: 10px;
}

.admin_profile_fields_table {
    & th.display,
    & th.required,
    td.display_in_profile_summary_cell,
    td.required-cell {
        text-align: center;
    }
}

.user-details-title {
    display: inline-block;
    min-width: 80px;
    font-weight: 600;
    padding-right: 5px;
}

.user-avatar-section {
    .inline-block {
        box-shadow: 0 0 10px hsl(0deg 0% 0% / 10%);
    }
}

#change_password_modal,
#change_email_modal {
    width: 34.2857em; /* 480px at 14px/em */
    max-width: 90vw;
}

#change-email-form-input-email {
    max-width: 90%;
}

#change_email_modal {
    #change_email_form {
        margin: 0;
    }
}

.disabled_setting_tooltip {
    cursor: not-allowed;
}

#account-settings .deactivate-buttons-group {
    display: flex;
    align-items: center;
    gap: 0.5em;
    flex-wrap: wrap;
}

#change_email_button,
#user_deactivate_account_button,
.deactivate_realm_button,
#api_key_button,
#user_email_address_visibility {
    &:disabled {
        pointer-events: none;
    }
}

#change_email_button,
#change_password {
    min-width: 0;
}

.change-email {
    display: flex;
    gap: 0.5rem;
}

.admin-realm-description,
.admin-realm-welcome-message-custom-text {
    /* We set the minimum height of textarea to be enough for two lines
    of text. Since box-sizing is set to "border-box", we also add
    2 * var(--input-vertical-padding) + 2 * var(--input-border-width). */
    min-height: calc(
        2em * var(--base-line-height-unitless) + 2 *
            var(--input-vertical-padding) + 2 * var(--input-border-width)
    );
    width: 500px;
    max-width: 80%;
    min-width: 500px;
    box-sizing: border-box;
}

.admin-realm-description.rendered_markdown {
    width: fit-content;
    /* 500px at 16px */
    max-width: 31.25em;
    min-width: 0;

    & > p:first-child {
        padding-top: 0;
    }

    & > p:last-child {
        margin-bottom: 0;
    }
}
/* Show yellow outline when organization description is empty,
   matching the compose box "approaching limit" warning style. */
.admin-realm-description.empty-description:not(:disabled) {
    border-color: var(
        --color-message-content-container-border-approaching-limit
    );
}

.admin-realm-welcome-message-custom-text {
    margin-bottom: 10px;
}

#welcome_message_custom_text_buttons_container {
    display: inline-flex;
    /* 5px at 16px em */
    gap: 0.3125em;
    align-items: center;
}

.setting_notification_sound,
.play_notification_sound {
    margin-right: 4px;
}

.play_notification_sound {
    .notification-sound-icon {
        font-size: 1.5714em; /* 22px at 14px / em */
        /* Visually center with chevron in select */
        line-height: 1.8571em; /* 26px at 14px / em */
        cursor: pointer;
    }
}

.setting_notification_sound {
    text-transform: capitalize;
}

.table {
    & tbody {
        border-bottom: 1px solid hsl(0deg 0% 87%);
    }
}

.wrapped-table {
    overflow-wrap: anywhere;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    white-space: normal;
}

#settings_content {
    & table + .progressive-table-wrapper table tr.user_row td:first-of-type {
        width: 20%;
    }

    /* This variable allows JavaScript to detect whether we are showing both
    the left sidebar and settings content for the current screen width or not. */
    --column-count: 2;
}

#uploaded_files_table > tr > td:nth-of-type(1),
#attachments-settings .upload-file-name {
    word-break: break-all;
}

.upload-mentioned-in,
.upload-date {
    word-break: normal;
}

#linkifier-settings {
    #linkifier_pattern,
    #linkifier_template {
        width: calc(100% - 10em - 6em);
    }
}

#playground-settings {
    #playground_pygments_language,
    #playground_name,
    #playground_url_template {
        width: calc(100% - 10em - 6em);
    }
}

#language_selection_modal {
    & table {
        width: 90%;
        margin-top: 20px;
        border-collapse: separate;
    }

    & td {
        padding-top: 1px;
    }
}
/* ... */

