modals: Fix extra bottom margin due to default form styling.
This commit overrides the default bottom margin applied to form
elements via bootstrap.app.css within modals, removing the unwanted
extra space at the bottom of the modal content area.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -95,12 +95,6 @@ h3,
     max-width: 90%;
 }
 
-#change_email_modal {
-    #change_email_form {
-        margin: 0;
-    }
-}
-
 .disabled_setting_tooltip {
     cursor: not-allowed;
 }
@@ -957,10 +951,6 @@ input[type="checkbox"] {
 }
 
 #add-custom-emoji-modal {
-    & form {
-        margin: 0;
-    }
-
     & input[type="text"] {
         padding: 6px;
     }
@@ -1070,7 +1060,6 @@ input[type="checkbox"] {
 
 .edit_bot_form {
     font-size: 100%;
-    margin: 0;
     padding: 0;
 
     .buttons {
@@ -1145,12 +1134,6 @@ input[type="checkbox"] {
         position: absolute;
         right: 20px;
         top: 0;
-    }
-}
-
-#change_password_modal {
-    #change_password_container {
-        margin: 0;
     }
 }
 
